[package]
name = "list_usb_hid_device"
version = "0.1.0"
authors = ["walton.hsu <walton.hsu@hp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
winapi = { version = "0.3.8", features = ["setupapi", "hidclass", "handleapi", "hidsdi"] }